addded nav & banner section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P Paribahan</title>
-
-
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body>
+<body class="mx-5 lg:w-[90%] lg:mx-auto">
+    <header class="">
+        <nav class="my-3">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden p-0">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-6" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                            <li><a class="text-lg font-medium font-raleway">Home</a></li>
+                            <li><a class="text-lg font-medium font-raleway">About</a></li>
+                            <li><a class="text-lg font-medium font-raleway">Destination</a></li>
+                            <li><a class="text-lg font-medium font-raleway">Search</a></li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-ghost text-2xl md:text-4xl font-extrabold font-raleway">P-Ticket</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li><a class="text-lg font-medium font-raleway">Home</a></li>
+                        <li><a class="text-lg font-medium font-raleway">About</a></li>
+                        <li><a class="text-lg font-medium font-raleway">Destination</a></li>
+                        <li><a class="text-lg font-medium font-raleway">Search</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end ">
+                    <button class="btn lg:mb-12 text-[#1DD100] bg-[#d2ddd031] border-2 border-[#1DD10066]">Bus <img
+                            src="./images/bus-icon.png" alt=""></button>
+                </div>
+            </div>
+        </nav>
+
+        <div>
+            <div class="hero min-h-96 md:min-h-screen bg-gradient-to-r from-[#484e5e7f] to-[#979ca9] rounded-3xl "
+                style="background-image: url(./images/banner.png); background-size: cover; background-position: center;">
+                <div class="hero-content text-center text-neutral-content">
+                    <div class="max-w-2xl">
+                        <h1
+                            class="md:leading-snug leading-tight text-3xl md:text-6xl text-white  font-extrabold font-raleway">
+                            End-to-End Travel with<br><span class="text-[#1DD100] ">P Paribahan</span></h1>
+                        <p class=" md:mb-6 my-3 font-inter text-sm md:text-lg text-white">Embark on Effortless Journeys
+                            with
+                            Ease! Book Your Bus Tickets Online Today and Travel with Confidence. Enjoy Convenient
+                            Booking,
+                            Secure Transactions, and Flexible Options. Your Next Adventure Awaits – Start Planning Now!
+                        </p>
+                        <button
+                            class="btn bg-[#1DD100] border-none text-black text-sm md:text-xl font-bold font-raleway">Buy
+                            Tickets</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class=" my-3  md:w-4/5 mx-auto flex flex-col md:flex-row gap-5 md:relative md:-top-10">
+                <div class="stat bg-white  border-b-2 border-[#1DD100] rounded-3xl flex justify-center items-center">
+                    <div class="">
+                        <img  src="./images/people.png" alt="">
+                    </div>
+                    <div>
+                        <div class="stat-value text-lg md:text-2xl font-bold font-inter">500K+</div>
+                        <div class="stat-desc font-inter">Registered users</div>
+                    </div>
+                </div>
+                <div class="stat bg-white border-b-2 border-[#1DD100] rounded-3xl flex justify-center items-center">
+                    <div class="">
+                        <img  src="./images/ticket-cupon.png" alt="">
+                    </div>
+                    <div>
+                        <div class="stat-value text-lg md:text-2xl font-bold font-inter">1.7 lacks</div>
+                        <div class="stat-desc font-inter">Tickets sold</div>
+                    </div>
+                </div>
+                <div class="stat bg-white border-b-2 border-[#1DD100] rounded-3xl flex justify-center items-center">
+                    <div class="">
+                        <img  src="./images/stoppage.png" alt="">
+                    </div>
+                    <div>
+                        <div class="stat-value text-lg md:text-2xl font-bold font-inter">80K+</div>
+                        <div class="stat-desc font-inter">Rental partners</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 
 </body>
 
