--- a/index.html
+++ b/index.html
@@ -212,34 +212,223 @@
                 </div>
 
                 <!-- seat section -->
-                <div class="p-8 bg-white flex flex-col lg:flex-row ">
+                <div class="p-8 bg-white rounded-3xl flex flex-col justify-between lg:flex-row ">
                     <!-- seat organization -->
-                    <div class="w-7/12">
+                    <div class="w-full lg:w-7/12 lg:pr-6 lg:border-r-2 lg:border-dotted lg:border-[#0307124D]">
                         <div>
                             <h4 class="font-raleway font-semibold text-xl">Select Your Seat</h4>
-
                             <div class="flex justify-between my-6 border-dotted border-y-2 border-[#03071233] py-3">
                                 <p class="flex gap-1"><img src="./images/seat-gray.png" alt=""><span
                                         class=" font-inter font-medium text-[#0307127F]">Available</span></p>
                                 <p class="flex gap-1"><img src="./images/seat-green-filled.png" alt=""><span
                                         class="font-inter font-medium text-[#1DD100]">Selected</span></p>
                             </div>
-
                             <div class="w-full text-right mb-4">
-                                <button class="btn"><img class="bg-none" src="./images/steering-wheel.svg"
-                                        alt=""></button>
+                                <button class="btn">
+                                    <img class="bg-none" src="./images/steering-wheel.svg" alt="">
+                                </button>
+                            </div>
+                        </div>
+
+                        <!-- seats -->
+                        <div class="flex font-inter">
+                            <!-- Seat serial -->
+                            <div
+                                class="grid grid-cols-1 justify-items-center place-items-center gap-5 w-1/6 font-inter font-semibold text-[#03071280]">
+                                <p class="h-[42px]">A</p>
+                                <p class="h-[42px]">B</p>
+                                <p class="h-[42px]">C</p>
+                                <p class="h-[42px]">D</p>
+                                <p class="h-[42px]">E</p>
+                                <p class="h-[42px]">F</p>
+                                <p class="h-[42px]">G</p>
+                                <p class="h-[42px]">H</p>
+                                <p class="h-[42px]">I</p>
+                                <p class="h-[42px]">J</p>
+                            </div>
+                            <div class="flex justify-between gap-6 w-full ">
+                                <!-- left column -->
+                                <div class="flex flex-row justify-between items-center gap-4 ">
+                                    <!-- column 1 -->
+                                    <div class="grid grid-cols-1 gap-4 ">
+                                        <button id="A1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">A1</button>
+                                        <button id="B1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">B1</button>
+                                        <button id="C1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">C1</button>
+                                        <button id="D1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">D1</button>
+                                        <button id="E1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">E1</button>
+                                        <button id="F1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">F1</button>
+                                        <button id="G1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">G1</button>
+                                        <button id="H1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">H1</button>
+                                        <button id="I1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">I1</button>
+                                        <button id="J1"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">J1</button>
+                                    </div>
+                                    <!-- column 2 -->
+                                    <div class="grid grid-cols-1 gap-4 ">
+                                        <button id="A2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">A2</button>
+                                        <button id="B2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">B2</button>
+                                        <button id="C2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">C2</button>
+                                        <button id="D2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">D2</button>
+                                        <button id="E2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">E2</button>
+                                        <button id="F2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">F2</button>
+                                        <button id="G2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">G2</button>
+                                        <button id="H2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">H2</button>
+                                        <button id="I2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">I2</button>
+                                        <button id="J2"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">J2</button>
+                                    </div>
+                                </div>
+                                <!-- right column -->
+                                <div class="flex flex-row justify-between items-center gap-4">
+                                    <!-- column 3 -->
+                                    <div class="grid grid-cols-1 gap-4 ">
+                                        <button id="A3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">A3</button>
+                                        <button id="B3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">B3</button>
+                                        <button id="C3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">C3</button>
+                                        <button id="D3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">D3</button>
+                                        <button id="E3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">E3</button>
+                                        <button id="F3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">F3</button>
+                                        <button id="G3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">G3</button>
+                                        <button id="H3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">H3</button>
+                                        <button id="I3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">I3</button>
+                                        <button id="J3"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">J3</button>
+                                    </div>
+                                    <!-- column 4 -->
+                                    <div class="grid grid-cols-1 gap-4 ">
+                                        <button id="A4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">A4</button>
+                                        <button id="B4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">B4</button>
+                                        <button id="C4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">C4</button>
+                                        <button id="D4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">D4</button>
+                                        <button id="E4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">E4</button>
+                                        <button id="F4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">F4</button>
+                                        <button id="G4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">G4</button>
+                                        <button id="H4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">H4</button>
+                                        <button id="I4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">I4</button>
+                                        <button id="J4"
+                                            class="btn w-auto md:w-[120px] lg:w-[80px] font-semibold bg-[#F7F8F8] text-[#03071280]">J4</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <!-- slected seat & personal details -->
-                    <div class="w-4/12">
+                    <div class="w-full mt-6 lg:mt-0 lg:w-2/5 lg:pl-6">
+                        <h4 class="font-raleway font-semibold pb-6 text-xl border-b-2 border-dotted border-[#0307124D]">
+                            Selected Seat</h4>
+
+                        <!-- seat details -->
+                        <div class="bg-[#F7F8F8] rounded-3xl p-6 my-6">
+                            <div class="flex justify-between font-medium">
+                                <p>Seat <span id="seats-count"
+                                        class="bg-[#1DD100] px-2 rounded-3xl text-sm text-white font-inter font-bold">0</span>
+                                </p>
+                                <p>Class</p>
+                                <p>Price</p>
+                            </div>
+                            <div id="selected-seat"
+                                class="border-b-2 border-t-2 border-dotted border-[#0307124D] py-2 my-2 text-[#03071299]">
+                                <div class="flex justify-between mb-3 ">
+                                    <p>S1 </p>
+                                    <p>Economy</p>
+                                    <p>550</p>
+                                </div>
+                                <div class="flex justify-between">
+                                    <p>S2</p>
+                                    <p>Economy</p>
+                                    <p>550</p>
+                                </div>
+                            </div>
+                            <div class="flex justify-between font-medium">
+                                <p>Total Price</p>
+                                <p>BDT <span id="total-price">0</span></p>
+                            </div>
+                            <div class="mt-2 mb-4 bg-[#FFF] flex justify-between rounded-xl p-1">
+
+                                <input type="text" class="pl-3" placeholder="Search" />
+                                <button class="btn font-semibold text-white bg-[#1DD100]">Apply</button>
+
+                            </div>
+                            <div class="flex justify-between font-medium">
+                                <p>Grand Total</p>
+                                <p>BDT <span id="grand-total-price">0</span></p>
+                            </div>
+                        </div>
+
+                        <!-- pessenger details -->
+
+                        <div>
+                            <label class="form-control w-full max-w-xs mb-5">
+                                <span class="label-text font-inter font-semibold mb-3">Passenger Name*</span>
+                                <input type="text" placeholder="Enter your name"
+                                    class="input input-bordered w-full max-w-xs p-4 font-inter" />
+                            </label>
+                            <label class="form-control w-full max-w-xs mb-5">
+                                <span class="label-text font-inter font-semibold mb-3">Phone Number*</span>
+                                <input type="text" placeholder="Enter your phone number"
+                                    class="input input-bordered w-full max-w-xs p-4 font-inter" />
+                            </label>
+                            <label class="form-control w-full max-w-xs mb-5">
+                                <span class="label-text font-inter font-semibold mb-3">Email ID*</span>
+                                <input type="text" placeholder="Enter your email id"
+                                    class="input input-bordered w-full max-w-xs p-4 font-inter" />
+                            </label>
+                            <button class="btn bg-[#1DD100] w-full md:w-1/2 lg:w-full text-white font-raleway font-extrabold">Next</button>
+                        </div>
+
+                        <!-- policy -->
+                        <div class="flex justify-between w-full lg:w-full md:w-1/2 mt-6">
+                            <p class="text-[#2f333d99] font-inter text-sm border-b-2 border-[#68718599]"><a href="">Terms and Conditions</a></p>
+                            <p class="text-[#2f333d99] font-inter text-sm border-b-2 border-[#68718599]"><a href="">Cancellation Policy</a></p>
+                        </div>
 
                     </div>
 
+
+
                 </div>
+
             </div>
+
         </div>
+
 
     </main>
     <footer>
