--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         </div>
 
                         <!-- seats -->
-                        <div class="flex font-inter">
+                        <div id="all-seats" class="flex font-inter">
                             <!-- Seat serial -->
                             <div
                                 class="grid grid-cols-1 justify-items-center place-items-center gap-5 w-1/6 font-inter font-semibold text-[#03071280]">
@@ -431,7 +431,36 @@
 
 
     </main>
-    <footer>
+    <footer class="bg-[#030712] py-8 md:py-10 lg:py-14">
+        <div class="mx-5 lg:w-[90%] lg:mx-auto">
+            <div class="border-b-2 border-dashed border-[#FFFFFF4D] pb-4 md:pb-10 flex flex-col md:flex-row justify-between">
+                <div class="mb-5 md:mb-0">
+                    <h1 class="text-3xl font-raleway text-white font-extrabold">P-Ticket</h1>
+                    <p class="font-inter text-[#FFFFFFCC] mt-2 md:mt-4">P-Ticket is a digital platform to make your<br>daily commuting better.</p>
+                </div>
+
+                <div class="font-raleway text-white">
+                    <p class="font-semibold mb-2 md:mb-4">Download our app</p>
+                    <div class="flex gap-2 border-2 rounded-md p-1 w-fit md:w-auto">
+                        <img src="./images/playstore.png" alt="">
+                        <p>GET IT ON
+                            <br>
+                            <span class="font-bold">Google Play</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex flex-col lg:flex-row justify-between mt-6">
+                <p class="text-[#FFFFFFB2] text-sm mb-3 lg:mb-0">@all rights reserved, P-Ticket services limited.2024</p>
+                <div class="flex flex-col md:flex-row md:gap-5 lg:justify-between lg:gap-6 font-inter font-medium text-sm text-[#FFFFFF] space-y1 md:space-y-0">
+                    <p>Terms & condition</p>
+                    <p>Return & refund policy</p>
+                    <p>Privacy policy</p>
+                </div>
+            </div>
+
+        </div>
 
     </footer>
     <script src="./scripts/utility.js"></script>
