added discount functionality

--- a/index.html
+++ b/index.html
@@ -375,12 +375,12 @@
                             </div>
                             <div class="flex justify-between font-medium">
                                 <p>Discount</p>
-                                <p>BDT <span id="total-price">0</span></p>
+                                <p>BDT <span id="discount-amount">0</span></p>
                             </div>
                             <div id="coupon-container" class="mt-2 mb-4 bg-[#FFF] flex justify-between rounded-xl p-1">
 
-                                <input id="coupon-field" type="text" class="pl-3" placeholder="Search" />
-                                <button id="coupon-btn" class="btn btn-disabled font-semibold text-white bg-[#1DD100] ">Apply</button>
+                                <input id="coupon-field" type="text" class="pl-3 w-full" placeholder="Search" />
+                                <button onclick="applyDiscount()" id="coupon-btn" class="btn btn-disabled font-semibold text-white bg-[#1DD100] ">Apply</button>
 
                             </div>
                             <div class="flex justify-between font-medium">
