--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@
                             <div id="coupon-container" class="mt-2 mb-4 bg-[#FFF] flex justify-between rounded-xl p-1">
 
                                 <input id="coupon-field" type="text" class="pl-3 w-full" placeholder="Search" />
-                                <button onclick="applyDiscount()" id="coupon-btn" class="btn btn-disabled font-semibold text-white bg-[#1DD100] ">Apply</button>
+                                <button onclick="applyDiscount()" id="coupon-btn"
+                                    class="btn btn-disabled font-semibold text-white bg-[#1DD100] ">Apply</button>
 
                             </div>
                             <div class="flex justify-between font-medium">
@@ -391,7 +392,7 @@
 
                         <!-- pessenger details -->
 
-                        <form>
+                        <div>
                             <label class="form-control w-full max-w-xs mb-5">
                                 <span class="label-text font-inter font-semibold mb-3">Passenger Name*</span>
                                 <input type="text" placeholder="Enter your name"
@@ -399,7 +400,7 @@
                             </label>
                             <label class="form-control w-full max-w-xs mb-5">
                                 <span class="label-text font-inter font-semibold mb-3">Phone Number*</span>
-                                <input type="tel" placeholder="Enter your phone number"
+                                <input id="phone" type="tel" placeholder="Enter your phone number"
                                     class="input input-bordered w-full max-w-xs p-4 font-inter" required />
                             </label>
                             <label class="form-control w-full max-w-xs mb-5">
@@ -408,13 +409,34 @@
                                     class="input input-bordered w-full max-w-xs p-4 font-inter" />
                             </label>
 
-                            <button
-                                class="btn bg-[#1DD100] w-full md:w-1/2 lg:w-full text-white font-raleway font-extrabold"
+                            <button id="next-btn"
+                                class="btn btn-disabled bg-[#1DD100] w-full md:w-1/2 lg:w-full text-white font-raleway font-extrabold"
                                 onclick="my_modal_5.showModal()">Next</button>
-                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
-                                <div class="modal-box">
+
+
+                            <!-- <dialog id="my_modal_4" class="modal">
+                                <div class="modal-box w-11/12 max-w-5xl">
                                     <h3 class="font-bold text-lg">Hello!</h3>
-                                    <p class="py-4">Press ESC key or click the button below to close</p>
+                                    <p class="py-4">Click the button below to close</p>
+                                    <div class="modal-action">
+                                        <form method="dialog">
+                                            
+                                            <button class="btn">Close</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </dialog> -->
+
+                            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                <div class="modal-box w-11/12 max-w-5xl font-roboto flex flex-col justify-center items-center">
+                                    <img src="./images/success.png" alt="">
+                                    <h3 class="font-bold text-2xl font-roboto text-[#27AE60]">SUCCESS</h3>
+                                    <p class="text-center font-medium text-xl text-[#4A4A4A]">Thank you for Booking Our
+                                        Bus Seats.
+                                        We are working hard to find the best service and deals for you.</p>
+                                    <p class="text-center font-light text-xl text-[#4A4A4A]">Shortly you will find a
+                                        confirmation
+                                        in your email.</p>
                                     <div class="modal-action">
                                         <form method="dialog">
                                             <!-- if there is a button in form, it will close the modal -->
@@ -423,7 +445,7 @@
                                     </div>
                                 </div>
                             </dialog>
-                        </form>
+                        </div>
 
                         <!-- policy -->
                         <div class="flex justify-between w-full lg:w-full md:w-1/2 mt-6">
