--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="">
     <header class="mx-5 lg:w-[90%] lg:mx-auto">
         <!-- Navbar -->
-        <nav class="my-3">
+        <nav class="my-2">
             <div class="navbar bg-base-100">
                 <div class="navbar-start">
                     <div class="dropdown">
@@ -27,7 +27,7 @@
                         </div>
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-                            <li><a class="text-lg font-medium font-raleway">Home</a></li>
+                            <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Home</a></li>
                             <li><a class="text-lg font-medium font-raleway">About</a></li>
                             <li><a class="text-lg font-medium font-raleway">Destination</a></li>
                             <li><a class="text-lg font-medium font-raleway">Search</a></li>
@@ -37,14 +37,14 @@
                 </div>
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
-                        <li><a class="text-lg font-medium font-raleway">Home</a></li>
+                        <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Home</a></li>
                         <li><a class="text-lg font-medium font-raleway">About</a></li>
                         <li><a class="text-lg font-medium font-raleway">Destination</a></li>
                         <li><a class="text-lg font-medium font-raleway">Search</a></li>
                     </ul>
                 </div>
                 <div class="navbar-end ">
-                    <button class="btn lg:mb-12 text-[#1DD100] bg-[#d2ddd031] border-2 border-[#1DD10066]">Bus <img
+                    <button class="btn text-[#1DD100] bg-[#d2ddd031] border-2 border-[#1DD10066]">Bus <img
                             src="./images/bus-icon.png" alt=""></button>
                 </div>
             </div>
@@ -420,7 +420,7 @@
                                     <img src="./images/success.png" alt="">
                                     <h3 class="font-bold text-2xl font-roboto text-[#27AE60]">SUCCESS</h3>
                                     <div class="">
-                                        <p class="text-center font-medium text-xl text-[#4A4A4A]">Thank you for Booking
+                                        <p class="text-center font-medium text-xl text-[#4A4A4A] mb-2">Thank you for Booking
                                             Our
                                             Bus Seats.
                                             We are working hard to find the best service and deals for you.</p>
