--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                             <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Home</a></li>
-                            <li><a class="text-lg font-medium font-raleway">About</a></li>
-                            <li><a class="text-lg font-medium font-raleway">Destination</a></li>
-                            <li><a class="text-lg font-medium font-raleway">Search</a></li>
+                            <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">About</a></li>
+                            <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Destination</a></li>
+                            <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Search</a></li>
                         </ul>
                     </div>
                     <a class="btn btn-ghost text-2xl md:text-4xl font-extrabold font-raleway">P-Ticket</a>
@@ -38,9 +38,9 @@
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1">
                         <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Home</a></li>
-                        <li><a class="text-lg font-medium font-raleway">About</a></li>
-                        <li><a class="text-lg font-medium font-raleway">Destination</a></li>
-                        <li><a class="text-lg font-medium font-raleway">Search</a></li>
+                        <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">About</a></li>
+                        <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Destination</a></li>
+                        <li><a class="text-[#030712B3] text-lg font-semibold font-raleway">Search</a></li>
                     </ul>
                 </div>
                 <div class="navbar-end ">
